Add descrition of execute java directly for profiling